--- a/frontend/src/assets/scss/_config.scss
+++ b/frontend/src/assets/scss/_config.scss
@@ -1,3 +1,6 @@
-* {
-  font-family: "Helvetica Neue",Helvetica,"PingFang SC","Hiragino Sans GB","Microsoft YaHei","微软雅黑",Arial,sans-serif;
-}
+$blue: #409eff;
+$success: #67c23a;
+$warning: #e6a23c;
+$danger: #f56c6c;
+$info: #909399;
+
