feat: add login/register form in the home page

--- a/frontend/src/assets/scss/_config.scss
+++ b/frontend/src/assets/scss/_config.scss
@@ -1,6 +1,23 @@
+/* color config */
 $blue: #409eff;
 $success: #67c23a;
 $warning: #e6a23c;
 $danger: #f56c6c;
 $info: #909399;
+$main-text: #303133;
+$regular-text: #606266;
+$sub-text: #909399;
+$placeholder-text: #c0c4cc;
+$first-border: #dcdfe6;
+$second-border: #e4e7ed;
+$third-border: #ebeef5;
+$fourth-border: #f2f6fc;
 
+/* font config */
+
+$main-title: 20px;
+$title: 18px;
+$subtitle: 16px;
+$paragraph: 14px;
+$small: 13px;
+$support: 12px;
